flex/flex-tests/testData/js2_highlighting/FunctionSignatureMismatch3.js2
package {
    public class <error>Base</error> {
        internal function foo(i:int) {}
    }
}
<error descr="Package should be first statement in file">package</error> {
    public class FunctionSignatureMismatch3 extends Base {
        internal override function foo(i: int) {}

        function bar() {
            foo<error>(1, 2, <caret>"abc", null)</error>;
        }

        function zzz() {
            foo<error>()</error>;
            foo(1);
        }
    }
}